fix: create a starting general channel on guild create, guild list to not overflow with a lot of guilds, addServer button to be active when modal is open

--- a/client/src/components/Sidebar/GuildList/GuildList.module.scss
+++ b/client/src/components/Sidebar/GuildList/GuildList.module.scss
@@ -10,4 +10,12 @@
 
   width: 80px;
   height: 100%;
+
+  // !NOTE: THIS BREAKS TOOLTIPS, IMPLEMENT A PORTAL BASED JS SOLUTION FOR TOOLTIPS
+  overflow: auto;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
+  &::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
+  }
 }
